# pixelprompt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/pixelprompt/: __init__.py  core.py  prompts.py  utils.py
tests/: __init__.py  test_core.py  test_presets.py  test_utils.py
